# write-powerful-rust-macros-book

./: .neoconf.json  README.md  remove-internal-git-directories.sh  rust-toolchain.toml
chap1/: Cargo.toml
chap1/src/: main.rs
chap2/: Cargo.toml
chap2-unstable/src/: alias_stuff.rs  banksters.rs  compose.rs  greeting.rs  main.rs
chap2/src/: bank.rs  compose.rs  exercises.rs  greeting.rs  main.rs
chap3/hello-world/: Cargo.toml
chap3/hello-world/hello-world-macro/src/: lib.rs
chap3/hello-world/src/: main.rs
chap4/make-public/make-public-macro/: Cargo.toml
chap4/make-public/make-public-macro/src/: lib.rs
chap4/make-public/src/: main.rs
chap4/make-public2/make-public-macro/: Cargo.toml
chap4/make-public2/make-public-macro/src/: lib.rs
chap4/make-public2/src/: main.rs
chap5/private/: Cargo.toml
chap5/private/private-macro/: Cargo.toml  Session.vim
chap5/private/private-macro/src/: lib.rs
chap5/private/src/: main.rs
stable/: flake.nix  rust-toolchain.toml
unstable/: rust-toolchain.toml
