[package]
name = "private-macro"
version = "0.1.0"
edition = "2021"

[dependencies]
quote = "1.0.33"
# enabling extra-traits, to make sure that we can print the datastructures (it probably makes usre to compile Display and Debug traits for the library...)
syn = {version = "2.0.39", features = ["extra-traits"]}
proc-macro2 = "1.0.69"

[lib]
proc-macro = true
